# cppProjTemplate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  README.md  build.sh  conanProfile  config_doxygen.sh  copy_git_hooks.sh  format_all_files.sh  run.sh
.devcontainer/: Dockerfile.vscode  devcontainer.json
.github/workflows/: build.yml  doxygen.yml
apps/app/: CMakeLists.txt  CMakePresets.json
apps/app/src/: main.cpp  someClass.cpp  someClass.h
githooks/: pre-commit
scripts/: build.sh  config_doxygen.sh  dev_container_build.sh  dev_container_conan_install.sh  dev_container_info.sh  format.sh  format_all_files.sh  generate_docs.sh  project_info.sh  run.sh  run_all_tests.sh
tests/app/someClassTester/: CMakeLists.txt
tests/app/someClassTester/src/: main.cpp
